Verbesserung des Highlighting-Mechanismus.
Zahlen können auch wieder gelöscht werden, wenn man dieselbe Zahl eingibt.